jobs list added ans started styling

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,6 @@
 // This is the top-level scss file. Import all other files in here.
 @import 'vars';
 @import 'mixins';
+@import 'typo';
 @import 'layout';
 @import 'comps';
