--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -1,8 +1,13 @@
 // colours
-$grey: #ccc;
-$white: #fff;
-$blue: #0A91EE;
-$darkness: #222;
+$j-grey: #ccc;
+$j-white: #fff;
+$j-darkness: #222;
+$j-smog: #3a3934;
 
-$marine: #69b7d3;
-$ivory: #f9f9f7;
+$j-marine: #69b7d3;
+$j-ivory: #f9f9f7;
+
+$j-fresh: #4abdac;
+$j-vermillion: #fc4a1a;
+$j-sunshine: #f7b733;
+$j-clean: #dfdce3
